fixed message alignment issue

--- a/transaction_ui/src/App.css
+++ b/transaction_ui/src/App.css
@@ -202,9 +202,11 @@ h1 {
 }
 
 .success-message {
-    position: 'fixed';
+    position: fixed;
+    margin-top: 240px;
+    color: rgb(255, 255, 255);
     font-size: '1rem';
-    animation: 'fadeOut 3.5s forwards';
+    animation: 'fadeOut 3s forwards';
 }
 
 .wallet-container {
